# cpplot

./: CMakeLists.txt  README
examples/: CMakeLists.txt  ex101_creating_a_plot.cc  ex102_mouse_and_keyboard_events.cc  ex103_multiple_plots.cc  ex104_style_and_color.cc  ex105_axes.cc  ex106_surface_and_contour.cc  ex107_3d_line_and_surface.cc  ex108_animation.cc
include/: axes.hpp  color.hpp  cpplot.hpp  cpplot_common.hpp  drawing.hpp  figure.hpp  glut.hpp  layer.hpp  line.hpp  math.hpp  patch.hpp  surface.hpp  text.hpp  types.hpp
lib/: CMakeLists.txt
lib/gl2ps/: CMakeLists.txt
src/: CMakeLists.txt  axes.cpp  cpplot.cpp  figure.cpp  glut.cpp  layer.cpp  line.cpp  patch.cpp  surface.cpp  text.cpp
